# egui-dashboard-template

./: Cargo.toml  README.md  justfile
dashboard/aesthetix/: Cargo.toml
dashboard/aesthetix/src/: lib.rs
dashboard/aesthetix/src/themes/: mod.rs  traits.rs
dashboard/aesthetix/src/themes/carl/: mod.rs
dashboard/aesthetix/src/themes/standard/: dark.rs  light.rs  mod.rs
dashboard/common/: Cargo.toml
dashboard/common/src/: lib.rs  theme.rs  version.rs
dashboard/common/src/theme/: colorscheme.rs  mod.rs  style.rs  traits.rs
dashboard/gui/: Cargo.toml
dashboard/gui/src/: app.rs  lib.rs
dashboard/gui/src/app/: mod.rs  state.rs
dashboard/gui/src/components/: about.rs  mod.rs  notifications.rs  settings.rs
dashboard/gui/src/components/basic/: button_group.rs  display_string.rs  mod.rs  modal.rs
