[workspace]
members = ["dashboard/gui", "dashboard/common"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.71"
homepage = "https://github.com/thebashpotato/egui-dashboard-template"
repository = "https://github.com/thebashpotato/egui-dashboard-template"
description = "Reusable, cross platform and themed dashboard template"
authors = ["matt.k.williams@protonmail.com"]
license = "MIT"

[workspace.dependencies]
dashboard_gui = { path = "dashboard/gui" }
dashboard_common = { path = "dashboard/common" }
cargo-husky = { version = "1.5.0", features = [
    "precommit-hook",
    "prepush-hook",
    "run-cargo-test",
    "run-cargo-clippy",
] }


[profile.release]
codegen-units = 1
incremental = false
strip = true        # Automatically strip symbols from the binary.
opt-level = "z"     # Optimize for size
lto = true          # optimize at the linking stage

[profile.dist]
inherits = "release"
