[package]
name = "dashboard_template_common"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
description.workspace = true
authors.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { version = "0.23.0", default-features = false, features = [
    "wgpu",
    "default_fonts",
] }
once_cell = "1.18.0"
semver = "1.0.20"
