[package]
name = "dashboard_template_gui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true

[dependencies]
dashboard_template_common.workspace = true
eframe = { version = "0.23.0", default-features = false, features = [
    "glow",
    "default_fonts",
] }
env_logger = "0.10.0"

[dev-dependencies]
cargo-husky.workspace = true

[[bin]]
name = "dashboard"
path = "src/bin/main.rs"