[package]
name = "dashboard_gui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true


[dependencies]
dashboard_common.workspace = true
eframe = { version = "0.23.0", default-features = false, features = [
    "glow",
    "default_fonts",
] }
env_logger = "0.10.0"
egui-aesthetix = { version = "0.2.0", features = ["all_themes"] }

[dev-dependencies]
cargo-husky.workspace = true

[[bin]]
name = "dashboard"
path = "src/bin/main.rs"
